# django_tagx

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.local.yml  justfile  main.py  pyproject.toml
.claude/skills/django-tests/: SKILL.md
apps/authentication/: apps.py  urls.py
apps/users/: admin.py  managers.py  models.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: test_managers.py  test_models.py
config/: asgi.py  debug.py  settings.py  urls.py
config/django/: base.py  production.py
config/settings/: jwt.py  postgres.py
core/: models.py
docs/superpowers/specs/: 2026-04-22-docker-compose-design.md
